--- a/genindex.html
+++ b/genindex.html
@@ -629,6 +629,8 @@
       <ul>
         <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatItem.get_or_create_child">(copyxnat.xnat.xnat_interface.XnatItem method)</a>
 </li>
+        <li><a href="copyxnat.xnat.xnat_interface.html#copyxnat.xnat.xnat_interface.XnatReconstruction.get_or_create_child">(copyxnat.xnat.xnat_interface.XnatReconstruction method)</a>
+</li>
       </ul></li>
       <li><a href="versioneer.html#versioneer.get_root">get_root() (in module versioneer)</a>
 </li>
