deploy: e6c9844ed7e2c71e0bd12b4f6105452dd5b29680

--- a/_modules/copyxnat/commands/copy_command.html
+++ b/_modules/copyxnat/commands/copy_command.html
@@ -97,7 +97,7 @@
 
         <span class="k">if</span> <span class="ow">not</span> <span class="n">dst_copy</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">inputs</span><span class="o">.</span><span class="n">reporter</span><span class="o">.</span><span class="n">log</span><span class="p">(</span>
-                <span class="s1">&#39;Skipping </span><span class="si">{}</span><span class="s1"> because no destination item could be &#39;</span>
+                <span class="s1">&#39;Skipping </span><span class="si">{}</span><span class="s1"> because no destination item was &#39;</span>
                 <span class="s1">&#39;created.&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">xnat_item</span><span class="o">.</span><span class="n">full_name</span><span class="p">))</span>
             <span class="k">return</span>
 
@@ -270,7 +270,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.2.
     </div>
   </body>
 </html>
