--- a/_modules/copyxnat/ui/copyxnat_command_line.html
+++ b/_modules/copyxnat/ui/copyxnat_command_line.html
@@ -56,7 +56,9 @@
 <div class="viewcode-block" id="main"><a class="viewcode-back" href="../../../copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">(</span><span class="n">args</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Entry point for copyxnat application&quot;&quot;&quot;</span>
 
-    <span class="n">parser</span> <span class="o">=</span> <span class="n">argparse</span><span class="o">.</span><span class="n">ArgumentParser</span><span class="p">(</span><span class="n">description</span><span class="o">=</span><span class="s1">&#39;copyxnat&#39;</span><span class="p">)</span>
+    <span class="n">parser</span> <span class="o">=</span> <span class="n">argparse</span><span class="o">.</span><span class="n">ArgumentParser</span><span class="p">(</span>
+        <span class="n">description</span><span class="o">=</span><span class="s1">&#39;CopyXnat: Utility for downloading or copying projects &#39;</span>
+                    <span class="s1">&#39;between XNAT servers&#39;</span><span class="p">)</span>
 
     <span class="n">version_string</span> <span class="o">=</span> <span class="n">get_version_string</span><span class="p">()</span>
     <span class="n">friendly_version_string</span> <span class="o">=</span> <span class="n">version_string</span> <span class="k">if</span> <span class="n">version_string</span> <span class="k">else</span> <span class="s1">&#39;unknown&#39;</span>
@@ -272,7 +274,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Tom Doel.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.1.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 3.5.2.
     </div>
   </body>
 </html>
