deploy: d280de45dd324fa84b7f695cce0d64ca89fa7238

--- a/genindex.html
+++ b/genindex.html
@@ -778,8 +778,6 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.main">main() (in module copyxnat.ui.copyxnat_command_line)</a>
-</li>
       <li><a href="copyxnat.xnat.copy_cache.html#copyxnat.xnat.copy_cache.CopyCache.make_output_path">make_output_path() (copyxnat.xnat.copy_cache.CopyCache method)</a>
 </li>
       <li><a href="copyxnat.xnat.xml_cleaner.html#copyxnat.xnat.xml_cleaner.XmlCleaner.make_project_names_unique">make_project_names_unique() (copyxnat.xnat.xml_cleaner.XmlCleaner method)</a>
@@ -1195,6 +1193,8 @@
         <li><a href="versioneer.html#versioneer.run_command">(in module versioneer)</a>
 </li>
       </ul></li>
+      <li><a href="copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.run_command_line">run_command_line() (in module copyxnat.ui.copyxnat_command_line)</a>
+</li>
       <li><a href="copyxnat.api.run_command.html#copyxnat.api.run_command.run_command_on_servers">run_command_on_servers() (in module copyxnat.api.run_command)</a>
 </li>
       <li><a href="copyxnat.xnat.commands.html#copyxnat.xnat.commands.Command.run_next">run_next() (copyxnat.xnat.commands.Command method)</a>
