--- a/_modules/copyxnat/ui/copyxnat_command_line.html
+++ b/_modules/copyxnat/ui/copyxnat_command_line.html
@@ -53,7 +53,7 @@
 <span class="kn">from</span> <span class="nn">copyxnat.config.app_settings</span> <span class="kn">import</span> <span class="n">AppSettings</span>
 
 
-<div class="viewcode-block" id="main"><a class="viewcode-back" href="../../../copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.main">[docs]</a><span class="k">def</span> <span class="nf">main</span><span class="p">(</span><span class="n">args</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+<div class="viewcode-block" id="run_command_line"><a class="viewcode-back" href="../../../copyxnat.ui.copyxnat_command_line.html#copyxnat.ui.copyxnat_command_line.run_command_line">[docs]</a><span class="k">def</span> <span class="nf">run_command_line</span><span class="p">(</span><span class="n">args</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Entry point for copyxnat application&quot;&quot;&quot;</span>
 
     <span class="n">parser</span> <span class="o">=</span> <span class="n">argparse</span><span class="o">.</span><span class="n">ArgumentParser</span><span class="p">(</span>
